--- a/css/main.scss
+++ b/css/main.scss
@@ -43,9 +43,10 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+		"../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap",
         "base",
         "layout",
         "syntax-highlighting",
-        "skrollr",
-        "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap"
+        "skrollr"
+        
 ;
