--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,7 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "skrollr"
+        "skrollr",
+        "polymer"
         
 ;
