--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -297,31 +297,136 @@
 }
 .contentpane{
     position:relative;
+    width:100%;
+}
+.hero__background {
+// This stretches the canvas across the entire hero unit
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // This positions the canvas under the text
+    z-index: 1;
 }
 #top-pane{
     height:400px;
+    //background-color:violet;
 }
 #blog-pane{
-    height:100%;
+    height:auto;
     background-color:#E5E5E5;
 }
-#work-pane{
-    height:500px;
+#work-section{
+    min-height:100%;
+    display:inline;
 }
+#somethingElse-pane{
+    display:inline-block;
+}
+
 .inner{
-    position:absolute;
     height:100%;
+    width:100%;
     content:" ";
+    padding:5% 10%;
 }
 .full-height{
     height:100%;
 }
+.dark-grad{
+    position:absolute;
+    background-image:linear-gradient(transparent,rgba(0,0,0,.4));
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    opacity:1;
+    @include transition("all .4s");
+}
+.dark-grad:hover {
+    opacity: .9;
+}
+.work-pane{
+    background-color:#EFEFEF;
+    background-repeat:no-repeat;
+    background-position:50% 50%;
+    background-size:100% auto;
+    padding-top:5%
+}
+$screen-sm:768px;
+@media (max-width:$screen-sm){
+    .work-pane{
+        padding-top:10%;
+    }
+}
 #work-dev{
-    background-color:rgba(0,0,0,.2);
+    background-image:url('/images/stargate-poster.png');
 }
 #work-photo{
-    background-color:rgba(0,0,0,.4);
+    background-image:url('/images/amaru.jpg');
+    background-size:cover;
 }
 #work-vid{
-    background-color:rgba(0,0,0,.6);
+}
+.post-link{
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis; 
+}
+.post-list{
+    @include flexbox();
+    -webkit-flex-flow:row wrap;
+    flex-flow:row wrap;
+    -webkit-justify-content: center;
+    justify-content:center;
+}
+.parallax{
+    -webkit-perspective:300px;
+    perspective:300px;
+    height: 100vh;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.parallax-group{
+    position: relative;
+    height: 100vh;
+    height: 100%;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    /*-webkit-transform:translate3d(800px, 0, -500px) rotateY(30deg);
+    transform: translate3d(800px, 0, -500px) rotateY(30deg);
+    @include transition("all .5s");*/
+}
+.parallax-layer{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.parallax-base{
+    -webkit-transform:translateZ(0);
+    transform:translateZ(0);
+}
+.parallax-back{
+    -webkit-transform:translate3d(0,-200px,-300px) scale(2);
+    transform:translate3d(0,-200px,-300px) scale(2);
+}
+@media (max-width:320px){
+    .parallax-back{
+        -webkit-transform:translate3d(0,0,-300px) scale(2);   /*agh this is such a hack*/
+        transform:translate3d(0,0,-300px) scale(2);
+    }
+}
+.work-title>h2{
+    text-transform:uppercase;
+    margin-bottom:5px;
+}
+.work-text{
+    margin-left:10%;
+    margin-right:10%;
+    color:#999;
+    border-top: 1px solid #999;
 }
