--- a/_sass/_polymer.scss
+++ b/_sass/_polymer.scss
@@ -38,10 +38,10 @@ core-header-panel::shadow #mainContainer{
 .transparentBG{
   opacity:1;
   background-image:url('/images/conf.jpg');
-  background-size:cover;
-  height:400px;
+  background-position:50% 0%;
+  background-repeat:no-repeat;
   position:absolute;
-  width:100%
+  width:100%;
 }
 
 .round{
