--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,26 +7,16 @@
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
-
-    <script src="/bower_components/platform/platform.js"></script>
+    {% if page.polymer %}
+      <script src="/bower_components/platform/platform.js"></script>
+    {% endif %}
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <script data-main="/js/main" src="/bower_components/requirejs/require.js"></script>
-    <script>  
-    document.addEventListener('DOMContentLoaded',function(){
-      if( !(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) ) {
-        document.getElementById('parallax-maybe').classList.add('parallax');
-        console.log('maybe');
-      } else {
-        document.addEventListener('polymer-ready', function() {
-          document.getElementsByTagName('app-bar')[0].transitionItems('add');
-        });
-      }
-    });
-    </script>
-
-    <link rel="import" href="/elements/elements.vulcanized.html">
+    {% if page.customResource %}
+      {% assign foo = {{page.customResource}} %}
+      {% include {{foo}} %}
+    {% endif %}
 
       <style>
       @font-face{
