--- a/_includes/custResXGIF.html
+++ b/_includes/custResXGIF.html
@@ -1,24 +1,39 @@
 <link rel="import" href="/elements/gif-flex/gif-flex.html">
+<link rel="import" href="/elements/gfy-cat/gfy-cat.html">
 <link rel="import" href="/bower_components/x-gif/dist/x-gif.html">
+<script src="/bower_components/snap.svg/dist/snap.svg.js"></script>
 <style>
-	x-gif{
-		-webkit-flex:1 1 33%;
+	.gif-flex > gfy-cat, .gif-flex > x-gif{
+		-webkit-flex:1 1 300px;
 		flex:1 1 33%;
-		min-width: 300px;
 		overflow:hidden;
 	}
-
-	img{
-		width:100%;
-		height:auto;
-	}
 	
-	gif-flex x-gif /deep/ img{
+	.gif-flex x-gif /deep/ img{
 		width:100%;
 		height:auto;
 	}
 
-	gif-flex x-gif::shadow /deep/ .frames-wrapper{
+	.gif-flex img{
+		width:100%;
+		height:auto;
+	}
+	gfy-cat{
+		padding-left:5px;
+		padding-right:5px;
+	}
+
+	.gif-flex x-gif::shadow /deep/ .frames-wrapper{
 		text-align:center;
+	}
+	.gif-flex {
+		display:-webkit-flex;
+		display: flex;
+		-webkit-flex-flow: row wrap;
+		flex-flow:row wrap;
+		-webkit-justify-content:center;
+		justify-content:center;
+		-webkit-align-items:center;
+		align-items: center;
 	}
 </style>
