--- a/_includes/xGifCatsFlex.html
+++ b/_includes/xGifCatsFlex.html
@@ -1,5 +1,6 @@
-<gif-flex>
-	<x-gif src="http://i.imgur.com/m25uYzq.gif"></x-gif>
-	<x-gif src="http://i.imgur.com/co807Nj.gif"></x-gif>
-	<x-gif src="http://i.imgur.com/3X537Gk.gif"></x-gif>
-</gif-flex>
+<div class="gif-flex">
+	<x-gif src="http://i.imgur.com/m25uYzq.gif" n-times="4"></x-gif>
+	<gfy-cat gfyName="LankyMellowFlycatcher" width="100%" color="rgba(255,255,255,.5)" fill="true"></gfy-cat>
+	<gfy-cat gfyName="CostlyAfraidEmu" width="100%" color="rgba(255,255,255,.5)"></gfy-cat>
+	<gfy-cat src="http://i.imgur.com/VmMgcsn.gif" width="100%" color="rgba(255,255,255,.5)" fill="true"></gfy-cat >
+</div>
