gfy-cat playpause animation, hiding of controls

--- a/_includes/custResXGIF.html
+++ b/_includes/custResXGIF.html
@@ -1,11 +1,10 @@
 <link rel="import" href="/elements/gif-flex/gif-flex.html">
 <link rel="import" href="/elements/gfy-cat/gfy-cat.html">
 <link rel="import" href="/bower_components/x-gif/dist/x-gif.html">
-<script src="/bower_components/snap.svg/dist/snap.svg.js"></script>
 <style>
 	.gif-flex > gfy-cat, .gif-flex > x-gif{
 		-webkit-flex:1 1 300px;
-		flex:1 1 33%;
+		flex:1 1 300px;
 		overflow:hidden;
 	}
 	
