--- a/elements/gfy-cat/gfy-cat.css
+++ b/elements/gfy-cat/gfy-cat.css
@@ -15,13 +15,18 @@ video {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 10%;
+  width: 15%;
   background-color: rgba(0, 0, 0, 0.4);
   padding-right: 10px;
   padding-left: 10px;
   height: 100%;
   -webkit-transition: right 0.3s ease;
-  transition: right 0.3s ease; }
+  transition: right 0.3s ease;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .gfyCtrl.shown {
   right: 0; }
@@ -63,14 +68,11 @@ playpause-svg.shown {
   width: 100%;
   text-align: center; }
 
-#gfyCtrlBox {
-  display: -webkit-flex;
-  display: flex; }
-
 .bttn {
   -webkit-transition: opacity 0.2s ease;
   transition: opacity 0.2s ease;
-  opacity: 0.7; }
+  opacity: 0.7;
+  width: 100%; }
 
 .bttn:hover {
   opacity: 1; }
