--- a/elements/playpause-svg/playpause-svg.css
+++ b/elements/playpause-svg/playpause-svg.css
@@ -41,6 +41,11 @@ svg {
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  -moz-transition: -webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  -ms-transition: -webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  -o-transition: -webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  transition: -webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
   -webkit-transition: transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
   -moz-transition: transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
   -ms-transition: transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
