--- a/elements/playpause-svg/playpause-svg.scss
+++ b/elements/playpause-svg/playpause-svg.scss
@@ -58,6 +58,7 @@ svg{
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  @include transition("-webkit-transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), -webkit-transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985)");
   @include transition("transform-origin 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), transform 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), visibility 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985), opacity 400ms cubic-bezier(0.260, 0.860, 0.440, 0.985)");
 }
 .future{
