gfy-cat improvements and bug fixes

--- a/_sass/_polymer.scss
+++ b/_sass/_polymer.scss
@@ -74,8 +74,8 @@ paper-ripple{
 }
 #pane1-text{
   z-index:101;
-  color:#bbb;
-  font-weight:100;
+  color:#ddd;
+  font-weight:300;
   margin-bottom:15px;
 }
 #startButton{
