--- a/elements/playpause-svg/playpause-svg.scss
+++ b/elements/playpause-svg/playpause-svg.scss
@@ -22,7 +22,7 @@
   right:0;
   left:0;
   margin:auto;
-  overflow:auto;
+  overflow:hidden;
   display:-webkit-flex;
   display:flex;
   -webkit-flex-flow:row wrap;
