--- a/elements/gfy-cat/gfy-cat.scss
+++ b/elements/gfy-cat/gfy-cat.scss
@@ -43,8 +43,6 @@ video{
 	clear:both;
 }
 #gfyCtrlBox svg{
-	width:100%;
-	height:auto;
 	display:block;
 	margin-bottom:5%;
 	&:hover{
@@ -63,6 +61,7 @@ playpause-svg.shown{
 }
 .speedCtrl{
 	position:relative;
+	max-height:30%;
 }
 #speed{
 	position:relative;
@@ -74,6 +73,10 @@ playpause-svg.shown{
 	transition:opacity .2s ease;
 	opacity:.7;
 	width:100%;
+	height:10%;
+}
+.speedCtrl>.bttn{
+	height:50%;
 }
 .bttn:hover{
 	opacity:1;
