--- a/elements/gfy-cat/gfy-cat.css
+++ b/elements/gfy-cat/gfy-cat.css
@@ -17,8 +17,6 @@ video {
   bottom: 0;
   width: 15%;
   background-color: rgba(0, 0, 0, 0.4);
-  padding-right: 10px;
-  padding-left: 10px;
   height: 100%;
   -webkit-transition: right 0.3s ease;
   transition: right 0.3s ease;
@@ -44,7 +42,11 @@ video {
 
 #gfyCtrlBox svg {
   display: block;
-  margin-bottom: 5%; }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-height: 100%; }
   #gfyCtrlBox svg:hover {
     cursor: pointer; }
 
@@ -60,7 +62,7 @@ playpause-svg.shown {
 
 .speedCtrl {
   position: relative;
-  max-height: 30%; }
+  display: block; }
 
 #speed {
   position: relative;
@@ -71,13 +73,22 @@ playpause-svg.shown {
   -webkit-transition: opacity 0.2s ease;
   transition: opacity 0.2s ease;
   opacity: 0.7;
+  padding-right: 10px;
+  padding-left: 10px;
   width: 100%;
-  height: 10%; }
+  box-sizing: border-box;
+  position: relative;
+  height: 0;
+  padding-bottom: 60%; }
 
-.speedCtrl > .bttn {
-  height: 50%; }
+.gfyCtrl > * {
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 .bttn:hover {
   opacity: 1; }
+
+.active {
+  background-color: rgba(0, 0, 0, 0.3); }
 
 /*# sourceMappingURL=gfy-cat.css.map */
