--- a/elements/gfy-cat/gfy-cat.scss
+++ b/elements/gfy-cat/gfy-cat.scss
@@ -17,8 +17,6 @@ video{
 	bottom:0;
 	width:15%;
 	background-color: rgba(0,0,0,.4);
-	padding-right:10px;
-	padding-left:10px;
 	height:100%;
 	-webkit-transition:right .3s ease;
 	transition:right .3s ease;
@@ -44,10 +42,15 @@ video{
 }
 #gfyCtrlBox svg{
 	display:block;
-	margin-bottom:5%;
 	&:hover{
 		cursor:pointer;
 	}
+	position:absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	max-height: 100%;
+
 }
 playpause-svg{
 	width:20%;
@@ -61,7 +64,7 @@ playpause-svg.shown{
 }
 .speedCtrl{
 	position:relative;
-	max-height:30%;
+	display:block;
 }
 #speed{
 	position:relative;
@@ -72,12 +75,22 @@ playpause-svg.shown{
 	-webkit-transition:opacity .2s ease;
 	transition:opacity .2s ease;
 	opacity:.7;
-	width:100%;
-	height:10%;
+	padding-right:10px;
+	padding-left:10px;
+	width: 100%;
+	box-sizing: border-box;
+	position:relative;
+	height:0;
+	padding-bottom:60%;
 }
-.speedCtrl>.bttn{
-	height:50%;
+.gfyCtrl>*{
+	padding-top:10px;
+	padding-bottom:10px;
 }
+
 .bttn:hover{
 	opacity:1;
+}
+.active{
+	background-color:rgba(0,0,0,.3);
 }
