--- a/_includes/xGifCatsFlex.html
+++ b/_includes/xGifCatsFlex.html
@@ -1,6 +1,6 @@
 <div class="gif-flex">
 	<x-gif src="http://i.imgur.com/m25uYzq.gif" n-times="4"></x-gif>
 	<gfy-cat gfyName="LankyMellowFlycatcher" width="100%" color="rgba(255,255,255,0.5)" fill="true" ntimes="2"></gfy-cat>
-	<gfy-cat gfyName="CostlyAfraidEmu" width="100%" color="#eee"></gfy-cat>
+	<gfy-cat gfyName="CostlyAfraidEmu" width="100%" color="#eee" loop></gfy-cat>
 	<gfy-cat src="http://i.imgur.com/VmMgcsn.gif" width="100%" color="rgba(255,255,255,0.5)" fill="true"></gfy-cat >
 </div>
