gfy-cat post update

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,10 +204,12 @@ pre {
 body {
   background: #E5E5E5;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
 }
 html,body{
   height:100%;
+}
+p{
+  margin-bottom:25px;
 }
 hr{
   margin-top:-10px;
