title change gfy-cat post update

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -427,7 +427,7 @@ $screen-sm:768px;
 }
 .transparentBG{
   opacity:1;
-  background-image:url('/images/whiteSandsCloseUp.jpg');
+  background-image:url('/images/whiteSandsDunes.jpg');
   background-position:50% 50%;
   background-repeat:no-repeat;
   background-size:cover;
