--- a/_includes/xGifCatsFlex.html
+++ b/_includes/xGifCatsFlex.html
@@ -1,9 +1,8 @@
 <div class="gif-flex">
 	<x-gif src="http://i.imgur.com/m25uYzq.gif" n-times="4"></x-gif>
 	<gfy-cat gfyName="LankyMellowFlycatcher" width="100%" color="rgba(255,255,255,0.5)" fill="true" ntimes="2"></gfy-cat>
-	<gfy-cat gfyName="CostlyAfraidEmu" width="100%" color="#eee" loop></gfy-cat>
+	<gfy-cat gfyName="CostlyAfraidEmu" width="100%" strokeWidth="1" color="#eee" loop></gfy-cat>
 	<gfy-cat src="http://i.imgur.com/VmMgcsn.gif" width="100%" color="rgba(255,255,255,0.5)" fill="true"></gfy-cat>
 	<gfy-cat src="http://media2.giphy.com/media/BP9eSu9cnnGN2/giphy.gif" width="100%" color="rgba(255,255,255,0.5)" fill="true" loop></gfy-cat>
-	<gfy-cat src="http://i.giphy.com/q0gmJhbizzdE4.gif" width="100%" color="rgba(255,255,255,0.5)" ntimes="10"></gfy-cat>
 	<gfy-cat src="http://i.giphy.com/5xjLHmAzfaRJ6.gif" width="100%" fill="true" color="rgba(255,255,255,0.5)" ntimes="10"></gfy-cat>
 </div>
