--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper header-wrapper">
 
+    <div class="logo"></div>
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
