--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,20 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
+  <header class="post-header" style="background-image: url('/images/{{page.image}}');">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
   <article class="post-content">
-    {{ content }}
+  	<div class="row">
+  		<div class="col-sm-2 ctr">
+  			<div class="snapshot" style="background-image:url('/images/{{page.snapshot}}');"></div>
+  			<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  		</div>
+  		<div class="col-sm-10">
+  			{{ content }}
+  		</div>
+  	</div>
   </article>
 
 </div>
