--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -95,8 +95,8 @@ a {
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: darken($text-color,20%);
+        text-decoration:none;
     }
 }
 
@@ -156,8 +156,6 @@ pre {
     //max-width:         calc(800px - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: 10%;
-    padding-left: 10%;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
@@ -166,6 +164,10 @@ pre {
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
+}
+
+.header-wrapper{
+  padding:0 3%;
 }
 
 
