rogue pickle fixed

--- a/_includes/homeHead.html
+++ b/_includes/homeHead.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <script data-main="/js/main" src="/bower_components/requirejs/require.js"></script>
     <script>  
     document.addEventListener('DOMContentLoaded',function(){
