--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     {% if page.customResource %}
       {% assign foo = {{page.customResource}} %}
       {% include {{foo}} %}
