--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -440,7 +440,7 @@ $screen-sm:768px;
 }
 .transparentBG{
   opacity:1;
-  background-image:url('/images/whiteSandsDunes.jpg');
+  background-image:url('/images/cubistBG.svg');
   background-position:50% 50%;
   background-repeat:no-repeat;
   background-size:cover;
