--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -367,6 +367,16 @@ preview-card .preview{
     left:0;
     right:0;
 }
+flip-label:hover{
+    cursor:pointer;
+}
+.transparent-link{
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
 .work-pane{
     background-color:#EFEFEF;
     background-repeat:no-repeat;
