css mistake fixed

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -246,6 +246,10 @@
             font-size: 18px;
         }
     }
+    
+    img{
+        max-width: 100%;
+    }
 }
 .bg-wrapper{
     position:absolute;
