--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -448,8 +448,8 @@ $screen-sm:768px;
         transform:translateZ(0);
     }
     .parallax-back{
-        -webkit-transform:translate3d(0,-232px,-300px) scale(2);
-        transform:translate3d(0,-232px,-300px) scale(2);
+        -webkit-transform:translate3d(0,-280,-300px) scale(2);
+        transform:translate3d(0,-280,-300px) scale(2);
     }
 }
 .transparentBG{
