--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,8 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 45%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$blog-grey: rgba(10,10,10,0.7);
+
 $on-palm:          600px;
 $on-laptop:        800px;
 
