--- a/_includes/homeHead.html
+++ b/_includes/homeHead.html
@@ -10,6 +10,9 @@
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    {% if jekyll.environment == 'production' %}
+      <link href='/dist/styles.css' rel='stylesheet' type='text/css'>
+    {% endif %}
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <script>
     /* Modernizr 2.8.3 (Custom Build) | MIT & BSD
