--- a/_styles/hero.scss
+++ b/_styles/hero.scss
@@ -1,3 +1,18 @@
-.hero{
-  margin:0;
+#hero-signature{
+  width:100px;
+}
+#title-line{
+  padding:.5em 5em 0 1em,
+}
+@media(max-width:414px){
+  #hero-signature{
+    width:60px;
+  }
+  #name-line{
+    margin-bottom:50%;
+  }
+  #title-line{
+    margin-top:50%;
+    padding:.5em 2em 0 1em,
+  }
 }
