--- a/_styles/hero.scss
+++ b/_styles/hero.scss
@@ -4,6 +4,14 @@
 #title-line{
   padding:.5em 5em 0 1em,
 }
+@media(max-width:768px) and (orientation:portrait){
+  #name-line{
+    margin-bottom:20%;
+  }
+  #title-line{
+    margin-top:-20%;
+  }
+}
 @media(max-width:414px){
   #hero-signature{
     width:60px;
@@ -12,7 +20,7 @@
     margin-bottom:50%;
   }
   #title-line{
-    margin-top:50%;
+    margin-top:-30%;
     padding:.5em 2em 0 1em,
   }
 }
