--- a/_styles/projectPane.scss
+++ b/_styles/projectPane.scss
@@ -102,6 +102,18 @@
         height:150px;
     }
 }
+.touch .project-pane{
+  max-width:100%;
+  background-color:transparent;
+  .overlay-pane{
+      opacity:1;
+      transform:translate3d(0,0,0);
+  }
+  .overlay-bg{
+      opacity:1;
+      transform:scale(3) rotateZ(30deg) translate3d(0,0,0);
+  }
+}
 @media(max-width:414px){
   .project-pic img{
       height:auto;
@@ -111,13 +123,5 @@
     height:400px;
     width:100%;
     background-color:transparent;
-    .overlay-pane{
-        opacity:1;
-        transform:translate3d(0,0,0);
-    }
-    .overlay-bg{
-        opacity:1;
-        transform:scale(3) rotateZ(30deg) translate3d(0,0,0);
-    }
   }
 }
