--- a/_styles/singleCol.scss
+++ b/_styles/singleCol.scss
@@ -3,6 +3,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+img.shadow{
+  box-shadow: 0 10px 20px #A0A0A0;
+}
 @media(max-width:414px){
   .layout-single-col{
     padding:0 2em;
