--- a/_styles/hero.scss
+++ b/_styles/hero.scss
@@ -2,7 +2,7 @@
   width:100px;
 }
 #title-line{
-  padding:.5em 5em 0 1em,
+  padding:.5em 5em 0 1em;
 }
 @media(max-width:768px) and (orientation:portrait){
   #name-line{
