site addition for devtalk

--- a/_includes/homeHead.html
+++ b/_includes/homeHead.html
@@ -24,12 +24,12 @@
       <style>
       body{
         background: #E5E5E5;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Lato", Helvetica, Arial, sans-serif;
       }
       .sk-cube-grid {
         width: 40px;
         height: 40px;
-        margin: 100px auto;
+        margin: 100px auto 0;
       }
 
       .sk-cube-grid .sk-cube {
