vapor write up added

--- a/_styles/footer.scss
+++ b/_styles/footer.scss
@@ -1,12 +1,7 @@
 #footer{
-  padding:30px 40px;
+  padding:30px 2em;
   font-size:.8em;
   background-color: rgba(170, 166, 161, 0.1);
-  .long-hr{
-    height:1px;
-    width:100%;
-    background-color:#999;
-  }
 }
 .footer-link{
   margin-right:20px;
