--- a/_styles/projectPane.scss
+++ b/_styles/projectPane.scss
@@ -114,6 +114,11 @@
       transform:scale(3) rotateZ(30deg) translate3d(0,0,0);
   }
 }
+@media(max-width:768px) and (orientation:portrait){
+  .proj-descript{
+    padding:2em;
+  }
+}
 @media(max-width:414px){
   .proj-descript{
     padding:2em;
