--- a/_styles/projectView.scss
+++ b/_styles/projectView.scss
@@ -30,6 +30,11 @@
     height:300px;
   }
   .link-to-home-from-page{
-    padding:1.2em 1.5em;
+    padding:1.2em 2.5em;
+  }
+}
+@media(max-width:414px){
+  .link-to-home-from-page{
+    padding:1.2em 2em;
   }
 }
